Updated API URLs, author info & fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mecklenburg County GIS portal for open data and open source software.">
-    <meta name="author" content="Tobin Bradley">
+    <meta name="author" content="Adem Kurtipek">
     <title>The Archive - Mecklenburg County GIS</title>
 
     <!-- icon and theme stuff -->
@@ -70,6 +70,17 @@
     </dialog>
 
     <script type="module" src="/src/main.js"></script>
+
+    <!--   Start / Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K234HBBNDW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K234HBBNDW');
+    </script>
+    <!-- End / Google Analytics -->
 
   </body>
 </html>
